@@ -5,7 +5,7 @@ export(bct,char2seed,chisq.detail,ci.examp,clipplot,clt.examp,cnvrt.coords,
        run.Pvalue.norm.sim,run.Pvalue.binom.sim,
        identify.polylist,lattice.demo,limits.g,loess.demo,mle.demo,
        ms.arrows,ms.female,ms.filled.polygon,ms.male,ms.polygon,ms.polygram,
-       ms.sunflowers,my.symbols,panel.dice,plot.dice,plot.rgl.coin,
+       ms.sunflowers,ms.image,my.symbols,panel.dice,plot.dice,plot.rgl.coin,
        plot.rgl.die,plot2script,plotFagan,plotFagan2,plotFagan.old,
        plotFagan2.old,power.examp,updateusr,pairs2,
        prepanel.dice,project.Map,put.points.demo,shadowtext,
