@@ -55,7 +55,7 @@ dice(10,4, plot.it=TRUE)
 
 plot(dice(10,4))
 
-# or 
+# or
 
 tmp <- dice(10,4)
 plot(tmp)
@@ -63,6 +63,20 @@ plot(tmp)
 # a loaded die
 table(tmp <- dice(100,1,plot.it=TRUE, load=6:1 ) )
 mean(tmp)
+
+# Efron's dice
+ed <- list( rep( c(4,0), c(4,2) ),
+  rep(3,6), rep( c(6,2), c(2,4) ),
+  rep( c(5,1), c(3,3) ) )
+
+tmp <- dice( 10000, ndice=4 )
+ed.out <- sapply(1:4, function(i) ed[[i]][ tmp[[i]] ] )
+
+mean(ed.out[,1] > ed.out[,2])
+mean(ed.out[,2] > ed.out[,3])
+mean(ed.out[,3] > ed.out[,4])
+mean(ed.out[,4] > ed.out[,1])
+
 
 ## redo De Mere's question
 
